--- a/第四章 循环结构程序设计/第四章 循环结构程序设计/第四章 循环结构程序设计.vcxproj
+++ b/第四章 循环结构程序设计/第四章 循环结构程序设计/第四章 循环结构程序设计.vcxproj
@@ -10,11 +10,8 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="game.c" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{5F9FA850-072E-430F-9461-2E53F61DC9CD}</ProjectGuid>
+    <ProjectGuid>{CF1A119C-5E42-4A4F-8823-6D8F26034042}</ProjectGuid>
     <RootNamespace>第四章循环结构程序设计</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -47,7 +44,6 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -63,6 +59,9 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="test.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
