--- a/第六章 用函数实现模块化程序设计/第六章 用函数实现模块化程序设计/第六章 用函数实现模块化程序设计.vcxproj
+++ b/第六章 用函数实现模块化程序设计/第六章 用函数实现模块化程序设计/第六章 用函数实现模块化程序设计.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{2EB8D128-6EE2-4561-BAC5-61AD4DFAE8EE}</ProjectGuid>
+    <ProjectGuid>{A1E1D03D-A4DD-44F9-8613-A535A37AECDB}</ProjectGuid>
     <RootNamespace>第六章用函数实现模块化程序设计</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -44,6 +44,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
